--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,10 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.0.RELEASE</version>
+		<version>1.3.5.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter -->
 	</parent>
 
 	<properties>
@@ -23,7 +25,33 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-bus</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-monitor</artifactId>
+			<!-- <version>1.1.2.RELEASE</version> -->
+			<!-- <exclusions> -->
+			<!-- <exclusion> -->
+			<!-- <groupId>org.springframework.cloud</groupId> -->
+			<!-- <artifactId>spring-cloud-bus</artifactId> -->
+			<!-- </exclusion> -->
+			<!-- </exclusions> -->
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-bus</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -36,6 +64,15 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.netflix.ribbon</groupId>
+			<artifactId>ribbon-core</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-ribbon</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -45,7 +82,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
@@ -71,7 +108,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j-cypher-compiler-2.1</artifactId>
@@ -80,12 +117,40 @@
 	</dependencies>
 
 
+	<!-- <dependencies> <dependency> <groupId>org.springframework.cloud</groupId> 
+		<artifactId>spring-cloud-starter-bus-amqp</artifactId> <exclusions> <exclusion> 
+		<groupId>org.springframework.cloud</groupId> <artifactId>spring-cloud-bus</artifactId> 
+		</exclusion> </exclusions> </dependency> <dependency> <groupId>org.springframework.cloud</groupId> 
+		<artifactId>spring-cloud-bus</artifactId> </dependency> <dependency> <groupId>org.springframework.boot</groupId> 
+		<artifactId>spring-boot-starter-actuator</artifactId> </dependency> <dependency> 
+		<groupId>org.springframework.cloud</groupId> <artifactId>spring-cloud-starter-hystrix</artifactId> 
+		</dependency> <dependency> <groupId>org.springframework.cloud</groupId> <artifactId>spring-cloud-starter-config</artifactId> 
+		<version>1.1.2.RELEASE</version> </dependency> <dependency> <groupId>org.springframework.cloud</groupId> 
+		<artifactId>spring-cloud-config-monitor</artifactId> <version>1.1.2.RELEASE</version> 
+		<exclusions> <exclusion> <groupId>org.springframework.cloud</groupId> <artifactId>spring-cloud-bus</artifactId> 
+		</exclusion> </exclusions> </dependency> <dependency> <groupId>org.springframework.cloud</groupId> 
+		<artifactId>spring-cloud-starter-eureka</artifactId> <version>1.1.2.RELEASE</version> 
+		</dependency> https://mvnrepository.com/artifact/com.netflix.servo/servo-core 
+		<dependency> <groupId>com.netflix.servo</groupId> <artifactId>servo-core</artifactId> 
+		<version>0.12.8</version> </dependency> <dependency> <groupId>org.springframework.boot</groupId> 
+		<artifactId>spring-boot-starter-aop</artifactId> </dependency> <dependency> 
+		<groupId>org.springframework.retry</groupId> <artifactId>spring-retry</artifactId> 
+		</dependency> <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-test</artifactId> 
+		<scope>test</scope> </dependency> <dependency> <groupId>org.scala-lang</groupId> 
+		<artifactId>scala-library</artifactId> <version>2.11.0</version> </dependency> 
+		<dependency> <groupId>org.projectlombok</groupId> <artifactId>lombok</artifactId> 
+		<version>1.16.10</version> <scope>provided</scope> </dependency> <dependency> 
+		<groupId>org.springframework.boot</groupId> <artifactId>spring-boot-configuration-processor</artifactId> 
+		<optional>true</optional> </dependency> <dependency> <groupId>org.neo4j</groupId> 
+		<artifactId>neo4j-cypher-compiler-2.1</artifactId> <version>2.1.8</version> 
+		</dependency> </dependencies> -->
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-parent</artifactId>
-				<version>Brixton.M3</version>
+				<version>Brixton.BUILD-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
