--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,9 @@
 spring:
   application:
-    name: stories-microservice 
+    name: stories-microservice
+  rabbitmq:
+   host: localhost
+   port: 5672 
   cloud:
     config:
       discovery:
